fixed popup-layer line wrapping issue

--- a/app-dev/styles/base/base.css
+++ b/app-dev/styles/base/base.css
@@ -1321,6 +1321,7 @@ button.button-x {
 	display: none;
 	text-align: center;
 	overflow: auto;
+	white-space: nowrap;
 	}
 
 	.popup-layer:before {
